Render dummy places on front end

--- a/css/tripp.css
+++ b/css/tripp.css
@@ -74,6 +74,13 @@
     -moz-border-radius-bottomleft: 5px;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
+    display:flex;
+    flex-direction: column;
+}
+
+.place-detail{
+    display: flex;
+    flex-direction: column;
 }
 
 /*--- Media Query Desktop*/
