--- a/css/tripp.css
+++ b/css/tripp.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Roboto';
+}
 
 .mdl-layout__content{
     display:flex;
@@ -8,7 +11,14 @@
 .page-content{
     flex: 1;
     position : relative;
-    background-color: lightgray;
+    background-color: white;
+}
+
+.header-content {
+    background-color: #FBFAFB;
+    -webkit-box-shadow: 0px 10px 70px 0px rgba(0,86,172,0.85);
+    -moz-box-shadow: 0px 10px 70px 0px rgba(0,86,172,0.85);
+    box-shadow: 0px 10px 70px 0px rgba(0,86,172,0.85);
 }
 
 /* ================== MAP - Begin =================*/
@@ -28,7 +38,7 @@
 
 .places-info{
     width:100%;
-    height:40%;
+    height:50%;
     position:absolute;
     bottom:0;
     display: flex;
@@ -41,21 +51,27 @@
     flex-direction: column;
     width:95%;
     height:90%;
-    background-color: red;
     -webkit-border-radius: 5px; 
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
 
 .country-content{
-    background-color:blue;
-    flex: 1;
+    height: 2.5em;
+    background-color: #673ab7;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
     -moz-border-radius-topleft: 5px;
     -moz-border-radius-topright: 5px;
     border-top-left-radius: 5px;
-    border-top-right-radius: 5px
+    border-top-right-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.country{
+    color: white;
+    padding-left: 0.5em;
 }
 
 .search-content, .places-content {
@@ -78,6 +94,10 @@
     flex-direction: column;
 }
 
+.places-content>div {
+    border-bottom:4px solid #fbfbfb;
+}
+
 .place-detail{
     display: flex;
     flex-direction: column;
@@ -92,6 +112,11 @@
         width: 45%;
         max-width: 350px;
         height:100%;
+    }
+
+    .country {
+        padding-left: 0.8em;
+        font-size: 1.05em;
     }
 }
 
