Implements consumption of data from Google Places API and add markers on map

--- a/css/tripp.css
+++ b/css/tripp.css
@@ -139,7 +139,7 @@
     font-weight: bold;
     font-size: 1.15em;
 }
-.place-category>span{
+.place-type>span{
     color: #171719;
     font-size: 0.85em;
 }
