--- a/css/tripp.css
+++ b/css/tripp.css
@@ -192,5 +192,74 @@
 
 /* ================== PLACES - End =================*/
 
+/* ================== INFOWINDOW - Begin =================*/
+.info-window-content {
+    display: flex;
+    flex-direction: column;
+}
 
+.info-window-data-name{
+    background-color: #673ab7;
+    color : white;
+    font-size: 1.25em;
+    font-weight: bold;
+    padding:0.4em;
+}
+
+.info-window-label {
+    color: #673ab7;
+    font-size: 1em;
+    margin: 0.35em 0;
+    line-height: 0.7em;
+    font-weight: bold;
+}
+
+.info-window-data{
+    color: #171719;
+    font-size: 0.9em;
+    margin: 0.35em 0;
+    line-height: 1.2em;
+}
+
+.info-window-image-content{
+    padding-right: 0.75em;
+}
+
+.info-window-image-content>img{
+    width:65px;
+}
+
+.info-window-data-rating, .info-window-buttons-content{
+    margin-top: 0.5em;
+}
+
+.info-window-buttons-content{
+    display: flex;
+    border-top: 1px solid rgba(0,0,0,.12);
+    margin-top: 0.5em;
+    justify-content: center;
+    
+}
+
+.info-window-buttons-content>div{
+    padding: 0.25em;
+}
+
+.info-window-middle{
+    display:flex;
+    
+    margin-top: 0.5em;
+    align-items: center;
+}
+
+.info-window-button{
+    font-size: 0.85em;
+   
+    flex-grow:1;
+}
+
+
+
+
+/* ================== INFOWINDOW - End =================*/
      
