Implements navigation between Home Page and Map Page

--- a/css/tripp.css
+++ b/css/tripp.css
@@ -21,6 +21,10 @@
     box-shadow: 0px 10px 70px 0px rgba(0,86,172,0.85);
 }
 
+.mdl-layout-title img {
+    cursor : pointer;
+}
+
 /*=======================================================================*/
 /*==================        MAP PAGE STYLING         ====================*/
 /*=======================================================================*/
